--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -157,16 +157,16 @@
     "templates": {
       "start": "...or start with a Template",
       "panorama_title": "Panorama",
-      "panorama_desc": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel feugiat ante.",
+      "panorama_desc": "Panoramas are 360 pictures that can be explored in an inmersive fashion.",
       "panorama_text": "I just want to display the following panorama https://gurivr.s3.amazonaws.com/1606c0f8-5561-4c44-a697-1f544b313308-30118869044_b5b44d0f7e_k.jpg",
       "chart_title": "Chart",
-      "chart_desc": "Suspendisse lacus arcu, cursus sed tincidunt nec, malesuada non tortor. Cras egestas.",
+      "chart_desc": "Guri plays well with Quartz's Chartbuilder, displaying your data in VR.",
       "chart_text": "Show me the cool chart exported as https://s3.amazonaws.com/gurivr/my-data.json from https://quartz.github.io/Chartbuilder/ on a beige background",
-      "voiceover_title": "Voiceover",
-      "voiceover_desc": "Donec sed euismod urna. Nam varius eros nec quam.",
-      "voiceover_text": "Did you know your computer can now talk? Add a voiceover saying something like \"I'm not a ghost but your computer. I can speak out loud!\" and a quiet sky at sunset",
+      "voiceover_title": "Augmented Reality",
+      "voiceover_desc": "Enable permission to your camera and explore your world in a different way.",
+      "voiceover_text": "We can go to AR mode and enhance it with for example a text saying \"Is this reality?\"",
       "videosphere_title": "Videosphere",
-      "videosphere_desc": "Donec sed euismod urna. Nam varius eros nec quam.",
+      "videosphere_desc": "360 video is also possible with Guri. Just paste the video url into the editor.",
       "videosphere_text": "We call 360 video as a videosphere. You just need to drop a url like the following into the editor: https://ucarecdn.com/bcece0a8-86ce-460e-856b-40dac4875f15/"
     },
     "oss": {
@@ -181,7 +181,7 @@
       "title": "Now is your turn to have fun!",
       "description": "Start making cool stuff in the VR World just with a few lines of text.",
       "button": "Create your first story",
-      "by": "Made with ♥️ by <a href='https://twitter.com/impronunciable'>Dan Zajdband</a> - Web design by <a href='https://twitter.com/abad'>Federico Abad</a>"
+      "by": "Made with ♥️ by <a href='https://twitter.com/impronunciable'>Dan Zajdband</a><br><br>Web design by <a href='https://twitter.com/abad'>Federico Abad</a>"
     }
   },
   "login": {
