--- a/public/translations/es.json
+++ b/public/translations/es.json
@@ -202,6 +202,6 @@
   },
   "stories": {
     "delete_confirm": "Seguro querés borrar esta historia?",
-    "empty": "Parece que todavía no creaste ninguna historia. Podés empezar clickeando el botón de + que se encuentra abajo 😸"
+    "add": "Creá una historia"
   }
 }
