--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -116,7 +116,7 @@
     "links": {
       "title": "Links",
       "description": "Links are a way to navigate the scene in a non-linear fashion. You can attach a link to an image or video just by specifying which scene you want to link to. Once you do this, the user will see a cursor to point that on click will automatically go to the scene that you want.",
-      "preview": "My first scene lasts 4 seconds and displays a text that says \"Wait for it...\"\n\nThe second shows an image of the Guri logo https://s3.amazonaws.com/gurivr/logo.png that points to the first scene when the user clicks on it.\n\n"
+      "preview": "My first scene lasts <span class='cm-number'>4 seconds</span> and displays a <span class='cm-atom'>text</span> that says <span class='cm-string'>\"Wait for it...\"</span>\n\nThe second shows an <span class='cm-atom'>image</span> of the Guri logo <span class='cm-string'>https://s3.amazonaws.com/gurivr/logo.png</span> that points to the first scene when the user clicks on it.\n\n"
     },
     "speech_recognition": {
       "title": "Speech recognition",
@@ -177,7 +177,7 @@
       "videosphere_text": "We call 360 video as a videosphere. You just need to drop a url like the following into the editor: https://ucarecdn.com/bcece0a8-86ce-460e-856b-40dac4875f15/"
     },
     "oss": {
-      "title": "I'm Open source",
+      "title": "I'm Open Source",
       "description": "This is an <a href='https://github.com/opennewslabs/guri-vr'>open source project</a> created as part of a <a href='https://opennews.org/what/fellowships/'>Knight-Mozilla fellowship</a>. You can contribute and/or propose ideas you have for this project. <strong>Note</strong>: A wise reporter once said \"60% of the time it works every time\". This tool is under development and you may find some bugs. In that case we will appreciate if you can <a href='https://github.com/opennewslabs/guri-vr/issues'>fill an issue</a>."
     },
     "share": {
@@ -203,7 +203,7 @@
     "share": "Share link",
     "preview": "Fullscreen preview",
     "initial_title": "Untitled story",
-    "initial_text": "\n\nThis is the GuriVR editor 🎉. You can create your VR experience by just describing how you would like your scene to be. Every paragraph will be a scene as soon as you add an entity to it. Let's start with an example:\n\nMy first scene lasts 5 seconds and has a text that says \"This is my first scene. This is amazing!\".\n\nThe second is 30 seconds and have just a panorama located at https://ucarecdn.com/8e6da182-c794-4692-861d-d43da2fd5507/ along with the audio https://ucarecdn.com/49f6a82b-30fc-4ab9-80b5-85f286d67830/\n\nhint: Try with words like audio, panorama, text, videosphere, voiceover and chart.\n\nYou can also drag your files into the editor and get back a url 🙀"
+    "initial_text": "This is the GuriVR editor 🎉. You can create your VR experience by just describing how you would like your scene to be. Every paragraph will be a scene as soon as you add an entity to it. Let's start with an example:\n\nMy first scene lasts 5 seconds and has a text that says \"This is my first scene. This is amazing!\".\n\nThe second is 30 seconds and have just a panorama located at https://ucarecdn.com/8e6da182-c794-4692-861d-d43da2fd5507/ along with the audio https://ucarecdn.com/49f6a82b-30fc-4ab9-80b5-85f286d67830/\n\nhint: Try with words like audio, panorama, text, videosphere, voiceover and chart.\n\nYou can also drag your files into the editor and get back a url 🙀"
   },
   "stories": {
     "delete_confirm": "Are you sure you want to delete this story?",
